// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should match styles 1`] = `
.emotion-1 {
  display: inline-block;
  margin: 0 0.8rem 0 0;
  vertical-align: middle;
}

.emotion-0 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  stroke: currentColor;
  opacity: 0.8;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="emotion-0"
    fill="none"
    height="24"
    id="ehZysraJ-h"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.75"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"
      />
      <polygon
        points="12 15 17 21 7 21 12 15"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon should match styles when background is supplied 1`] = `
.emotion-1 {
  background: hotpink;
  border-radius: 50%;
  height: 4rem;
  width: 4rem;
  display: inline-block;
  margin: 0 0.8rem 0 0;
  vertical-align: middle;
}

.emotion-0 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  margin: 0.8rem;
  stroke: currentColor;
  opacity: 0.8;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="emotion-0"
    fill="none"
    height="24"
    id="ElUJShXjx_"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.75"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"
      />
      <polygon
        points="12 15 17 21 7 21 12 15"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon should match styles when border is supplied 1`] = `
.emotion-0 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  margin: 0.8rem;
  stroke: currentColor;
  opacity: 0.8;
}

.emotion-1 {
  border: 0.2rem solid hotpink;
  border-radius: 50%;
  height: 4rem;
  width: 4rem;
  display: inline-block;
  margin: 0 0.8rem 0 0;
  vertical-align: middle;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="emotion-0"
    fill="none"
    height="24"
    id="OYF6BMjpfF"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.75"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"
      />
      <polygon
        points="12 15 17 21 7 21 12 15"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon should match styles when color is supplied 1`] = `
.emotion-1 {
  display: inline-block;
  margin: 0 0.8rem 0 0;
  vertical-align: middle;
}

.emotion-0 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  stroke: currentColor;
  opacity: 0.8;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="emotion-0"
    color="hotpink"
    fill="none"
    height="24"
    id="SOUWyhzs6N"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.75"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"
      />
      <polygon
        points="12 15 17 21 7 21 12 15"
      />
    </g>
  </svg>
</span>
`;
